# rpg-encounters

./: .gitignore  AGENTS.md  CODEOWNERS  README.md  READMEs.md  docker-compose.dev.yml  docker-compose.yml  encounter-save-implementation-plan.md
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Caddyfile  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.extensions.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py
backend/app/: config.py  dependencies.py  http.py  main.py  telemetry.py  utils.py
backend/app/agents/: agent_output.py  base_agent.py  challenge_agent.py  challenge_agent_deps.py  character_agent.py  character_agent_output.py  communication_style_agent.py  conversation_agent.py  critical_failure_agent.py  critical_success_agent.py  influence_scoring_agent.py  personality_agent.py  trust_scoring_agent.py
backend/app/agents/challenges/: challenge_agent.py  critical_failure_agent.py  critical_success_agent.py  dependencies.py
backend/app/agents/conversations/: conversation_agent.py  negative_conversation_agent.py
backend/app/agents/prompts/: challenge_agent.jinja  challenge_agent.jinja.md  challenge_agent_critical_failure.jinja  challenge_agent_critical_failure.jinja.md  challenge_agent_critical_failure_system_prompt.md  challenge_agent_critical_success.jinja  challenge_agent_critical_success.jinja.md  challenge_agent_critical_success_system_prompt.md  challenge_agent_instructions.jinja  challenge_agent_instructions.jinja.md  challenge_agent_system_prompt.md  character_agent_system_prompt.md  communication_style_agent.jinja  (+20 more)
backend/app/ai/: character_agent.py  system_prompt.md
backend/app/auth/: README.md  handler.py  rate_limiter.py  session.py  token.py
backend/app/clients/: elevan_labs.py  google_cloud_tts.py  openai_moderation.py  redis_client.py  ses.py  tts.py  tts_base.py
backend/app/data/: account_store.py  base_store.py  character_store.py  connection_store.py  conversation_store.py  encounter_store.py  influence_store.py  magic_link_store.py  memory_store.py  moderation_store.py  nugget_store.py  player_magic_link_store.py  player_store.py  reveal_store.py  trust_store.py  user_billing_store.py  user_store.py  utils.py  world_store.py
backend/app/db/: connection.py  init_db.py  limits.py
backend/app/models/: account.py  alignment.py  auth.py  batch_update.py  canvas.py  character.py  class_traits.py  conversation.py  encounter.py  encounter_connection.py  game.py  influence.py  magic_link.py  memory.py  moderation.py  nugget.py  player.py  player_magic_link.py  race.py  reveal.py  trust.py  user.py  user_billing.py  util.py  world.py
backend/app/moderation/: README.md  check.py  ldnoobw_words.text  luis_von_ahn_bad_words.txt  response_handler.py
backend/app/routers/: auth.py  billing.py  canvas.py  challenges.py  characters.py  conversations.py  encounters.py  game.py  health.py  internal_test.py  memories.py  nuggets.py  players.py  profile.py  reveals.py  trust.py  voices.py  worlds.py
backend/app/services/: ability_challenge.py  agent_manager.py  audio_processor.py  billing_responses.py  challenge.py  context.py  conversation.py  conversation_manager.py  influence_calculator.py  llm.py  llm_latency.py  memory_manager.py  nugget_service.py  personality_generator.py  prompt.py  redis.py  reveal_progress.py  reveal_service.py  transcription.py  trust_calculator.py  tts.py  user_billing.py  user_billing_flush.py  user_token.py  user_token_flush.py  websocket.py
backend/app/templates/: login-email-template.jinja.html  render_template.py
backend/scripts/: build.sh  generate_backend_types.py  get_seeded_dm_session.py  push.sh  run-dev.sh  run-prod.sh
backend/tests/: AGENTS.md  conftest.py  test_character_agent.py  test_trust_system.py  utilities.py
backend/tests/ai/: test_character_agent.py
backend/tests/end-to-end/: test_magic_link_auth.py
backend/tests/end_to_end/: conftest.py  test_canvas_connections_flow.py  test_encounter_history_reset.py  test_encounter_tampering.py  test_game_endpoints.py  test_magic_link_auth.py  test_player_login.py  test_profile.py  test_user_billing.py  test_voices_endpoints.py  test_websocket_validation.py  utils.py
backend/tests/fixtures/: __init__.py  characters.py  connections.py  encounters.py  generate.py  memories.py  migrate_data.py  nuggets.py  players.py  reveals.py  seed_data.py  trust.py
backend/tests/scripts/: get_seeded_dm_session.py  set_billing_state.py
(+378 files in other folders)
