[project]
name = "dnd-ai"
version = "0.1.0"
description = "Dungeon Master AI Scenario Helper"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "uvicorn[standard]==0.35.0",
    "fastapi==0.116.0",
    "openai-whisper==20250625",
    "elevenlabs==2.7.1",
    "python-dotenv==1.1.1",
    "ollama==0.5.1",
    "pydantic-ai==0.4.8",
    "pre-commit==4.2.0",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "torchvision==0.22.1",
    "SQLAlchemy==2.0.43",
    "psycopg2-binary==2.9.10"
]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "dirty-equals==0.8.0",
    "inline-snapshot==0.15.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]