[project]
name = "rpg-encounters"
version = "0.1.0"
description = "AI Scenario Helper"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "uvicorn[standard]==0.35.0",
    "fastapi==0.116.1",
    "openai-whisper==20250625",
    "elevenlabs==2.7.1",
    "python-dotenv==1.1.1",
    "pydantic-ai==1.0.1",
    "pydantic[email]==2.11.7",
    "pre-commit==4.2.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "SQLAlchemy[asyncio]==2.0.43",
    "python-jose[cryptography]==3.5.0",
    "langfuse==3.3.4",
    "Jinja2==3.1.6",
    "httpx==0.28.1",
    "uvloop==0.21.0",
    "httptools==0.6.4",
    "asyncpg==0.30",
    "google-cloud-texttospeech==2.29.0",
    "itsdangerous==2.2.0"
]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "dirty-equals==0.8.0",
    "inline-snapshot==0.15.0"
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
torchaudio = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }

[pytest]
timeout = 60

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]